# LiteratureRetriever

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.uv  README.md  pyproject.toml  requirements.txt
app/: __init__.py  wsgi.py
app/api/: routes.py
app/crawler/: nature.py  nature_rss.py
app/models/: paper.py
app/services/: scheduler.py  storage.py
app/utils/: logging.py
scripts/: test_nature_crawler.py
