[project]
name = "literatureretriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "flask==3.1.2",
    "gunicorn==22.0.0",
    "lxml==5.2.2",
    "pymysql>=1.1.2",
    "requests==2.32.3",
]

[[tool.uv.index]]
url = "https://pypi.doubanio.com/simple"
default = true
